--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <img src="images/aroundtheus.svg" alt="Around the U.S logo" />
-        <hr class="line__header" />
+        <img
+          src="images/aroundtheus.svg"
+          alt="Around the U.S logo"
+          class="header__image"
+        />
       </header>
+      <hr class="line__header" />
       <main class="content">
         <section class="profile page__section">
           <img
@@ -26,47 +30,47 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
-        <section class="cards">
+        <section class="cards page__section">
           <ul class="card__list">
             <li class="card">
               <img src="images/yosemite.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Yosemite Valley</h2>
+                <h2 class="card__text">Yosemite Valley</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/lake-louise.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Lake Louise</h2>
+                <h2 class="card__text">Lake Louise</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/bald-mountains.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Bald Mountains</h2>
+                <h2 class="card__text">Bald Mountains</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/latemar.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Latemar</h2>
+                <h2 class="card__text">Latemar</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/vanoise.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Vanoise Nationa...</h2>
+                <h2 class="card__text">Vanoise Nationa.</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/lago.jpg" class="card__image" />
               <div class="card__description">
-                <h2>Lago Di Braies</h2>
+                <h2 class="card__text">Lago Di Braies</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
