3rd error on project 3, footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li class="card">
               <img src="images/vanoise.jpg" class="card__image" />
               <div class="card__description">
-                <h2 class="card__text">Vanoise Nationa.</h2>
+                <h2 class="card__text">Vanoise National Park</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -78,5 +78,8 @@
         </section>
       </main>
     </div>
+    <footer>
+      <p class="footer">&copy;2022 Around The U.S</p>
+    </footer>
   </body>
 </html>
