1st try, project 3 completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
           class="header__image"
         />
       </header>
-      <hr class="line__header" />
       <main class="content">
         <section class="profile page__section">
           <img
@@ -33,42 +32,62 @@
         <section class="cards page__section">
           <ul class="card__list">
             <li class="card">
-              <img src="images/yosemite.jpg" class="card__image" />
+              <img
+                src="images/yosemite.jpg"
+                class="card__image"
+                alt="card image"
+              />
               <div class="card__description">
                 <h2 class="card__text">Yosemite Valley</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="images/lake-louise.jpg" class="card__image" />
+              <img
+                src="images/lake-louise.jpg"
+                class="card__image"
+                alt="card image"
+              />
               <div class="card__description">
                 <h2 class="card__text">Lake Louise</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="images/bald-mountains.jpg" class="card__image" />
+              <img
+                src="images/bald-mountains.jpg"
+                class="card__image"
+                alt="card image"
+              />
               <div class="card__description">
                 <h2 class="card__text">Bald Mountains</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="images/latemar.jpg" class="card__image" />
+              <img
+                src="images/latemar.jpg"
+                class="card__image"
+                alt="card image"
+              />
               <div class="card__description">
                 <h2 class="card__text">Latemar</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="images/vanoise.jpg" class="card__image" />
+              <img
+                src="images/vanoise.jpg"
+                class="card__image"
+                alt="card image"
+              />
               <div class="card__description">
                 <h2 class="card__text">Vanoise National Park</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
-              <img src="images/lago.jpg" class="card__image" />
+              <img src="images/lago.jpg" class="card__image" alt="card image" />
               <div class="card__description">
                 <h2 class="card__text">Lago Di Braies</h2>
                 <button class="card__like-button"></button>
@@ -77,9 +96,11 @@
           </ul>
         </section>
       </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright page__section">
+          &copy; 2022 Around The U.S
+        </p>
+      </footer>
     </div>
-    <footer>
-      <p class="footer">&copy;2022 Around The U.S</p>
-    </footer>
   </body>
 </html>
