--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="images/yosemite.jpg"
@@ -97,9 +97,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright page__section">
-          &copy; 2022 Around The U.S
-        </p>
+        <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
     </div>
   </body>
