fix correction, 4th code review

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" type="edit"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" type="add"></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
@@ -39,7 +39,7 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
             <li class="card">
@@ -50,7 +50,7 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
             <li class="card">
@@ -61,7 +61,7 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
             <li class="card">
@@ -72,7 +72,7 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
             <li class="card">
@@ -83,14 +83,14 @@
               />
               <div class="card__description">
                 <h2 class="card__text">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
             <li class="card">
               <img src="images/lago.jpg" class="card__image" alt="card image" />
               <div class="card__description">
                 <h2 class="card__text">Lago Di Braies</h2>
-                <button class="card__like-button"></button>
+                <button class="card__like-button" type="like"></button>
               </div>
             </li>
           </ul>
