--- a/index.html
+++ b/index.html
@@ -100,5 +100,7 @@
         <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
     </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
