--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">jacques Cousteau</h1>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
@@ -34,70 +34,7 @@
           <button class="profile__add-button" type="button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="cards__list">
-            <li class="card">
-              <img
-                src="images/yosemite.jpg"
-                class="card__image"
-                alt="card image"
-              />
-              <div class="card__description">
-                <h2 class="card__text">Yosemite Valley</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="images/lake-louise.jpg"
-                class="card__image"
-                alt="card image"
-              />
-              <div class="card__description">
-                <h2 class="card__text">Lake Louise</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="images/bald-mountains.jpg"
-                class="card__image"
-                alt="card image"
-              />
-              <div class="card__description">
-                <h2 class="card__text">Bald Mountains</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="images/latemar.jpg"
-                class="card__image"
-                alt="card image"
-              />
-              <div class="card__description">
-                <h2 class="card__text">Latemar</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="images/vanoise.jpg"
-                class="card__image"
-                alt="card image"
-              />
-              <div class="card__description">
-                <h2 class="card__text">Vanoise National Park</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img src="images/lago.jpg" class="card__image" alt="card image" />
-              <div class="card__description">
-                <h2 class="card__text">Lago Di Braies</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-          </ul>
+          <ul class="cards__list"></ul>
         </section>
       </main>
       <footer class="footer page__section">
@@ -113,19 +50,30 @@
             type="text"
             class="modal__title"
             name="title"
-            placeholder="Jacques Cousteau"
+            placeholder="Name"
+            id="profile-title-input"
           />
           <input
             type="text"
             class="modal__description"
             name="description"
-            placeholder="Explorer"
+            placeholder="Description"
+            id="profile-description-input"
           />
-          <button type="button" class="modal__button">Save</button>
+          <button type="submit" class="button modal__button">Save</button>
         </form>
       </div>
     </div>
 
+    <template class="" id="card-template">
+      <li class="card">
+        <img class="card__image" src="" alt="" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button class="card__like-button" type="button"></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
