2nd try, project4 final stage

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button type="button" class="modal__close" id="modal-close"></button>
-        <p class="modal__heading">Edit Profile</p>
+        <h2 class="modal__heading">Edit Profile</h2>
         <form class="modal__form">
           <input
             type="text"
-            class="modal__title"
+            class="modal__input-title"
             name="title"
             placeholder="Name"
             id="profile-title-input"
           />
           <input
             type="text"
-            class="modal__description"
+            class="modal__input-description"
             name="description"
             placeholder="Description"
             id="profile-description-input"
