--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <form class="modal__form">
           <input
             type="text"
-            class="modal__input modal__input_title"
+            class="modal__input modal__input_type_title"
             name="title"
             placeholder="Name"
             id="profile-title-input"
           />
           <input
             type="text"
-            class="modal__input modal__input_description"
+            class="modal__input modal__input_type_description"
             name="description"
             placeholder="Description"
             id="profile-description-input"
