--- a/index.html
+++ b/index.html
@@ -40,28 +40,55 @@
       <footer class="footer page__section">
         <p class="footer__copyright">&copy; 2022 Around The U.S</p>
       </footer>
-    </div>
-    <div class="modal" id="profile-edit-modal">
-      <div class="modal__container">
-        <button type="button" class="modal__close" id="modal-close"></button>
-        <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form">
-          <input
-            type="text"
-            class="modal__input modal__input_type_title"
-            name="title"
-            placeholder="Name"
-            id="profile-title-input"
-          />
-          <input
-            type="text"
-            class="modal__input modal__input_type_description"
-            name="description"
-            placeholder="Description"
-            id="profile-description-input"
-          />
-          <button type="submit" class="button modal__button">Save</button>
-        </form>
+
+      <!-- Edit Modal -->
+      <div class="modal" id="profile-edit-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close" id="modal-close"></button>
+          <h2 class="modal__heading">Edit profile</h2>
+          <form class="modal__form">
+            <input
+              type="text"
+              class="modal__input modal__input_type_name"
+              name="name"
+              placeholder="Name"
+              id="profile-title-name"
+            />
+            <input
+              type="text"
+              class="modal__input modal__input_type_description"
+              name="description"
+              placeholder="Description"
+              id="profile-description-input"
+            />
+            <button type="submit" class="button modal__button">Save</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Add card Modal -->
+      <div class="modal" id="add-card-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close" id="modal-close"></button>
+          <h2 class="modal__heading">New place</h2>
+          <form class="modal__form">
+            <input
+              type="text"
+              class="modal__input modal__input_type_title"
+              name="title"
+              placeholder="Title"
+              id="card-title-input"
+            />
+            <input
+              type="text"
+              class="modal__input modal__input_type_url"
+              name="url"
+              placeholder="Image URL"
+              id="card-url-input"
+            />
+            <button type="submit" class="button modal__button">Save</button>
+          </form>
+        </div>
       </div>
     </div>
 
