--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
       <!-- Image preview modal -->
 
       <div class="modal" id="preview-image-modal">
-        <div class="modal__container">
+        <div class="modal__container modal__container_type_preimg">
           <button type="button" class="modal__close" id="modal-close"></button>
-          <img src="" alt="" />
-          <p class="image__caption"></p>
+          <img src="" alt="" class="modal__img" />
+          <p class="modal__caption"></p>
         </div>
       </div>
     </div>
