project 5, 2nd try

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">Edit profile</h2>
-          <form class="modal__form">
+          <form class="modal__form" id="modal-form">
             <input
               type="text"
               class="modal__input modal__input_type_name"
@@ -71,7 +71,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">New place</h2>
-          <form class="modal__form">
+          <form class="modal__form" id="modal-form">
             <input
               type="text"
               class="modal__input modal__input_type_title"
