--- a/index.html
+++ b/index.html
@@ -47,20 +47,35 @@
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">Edit profile</h2>
           <form class="modal__form" id="modal-form">
-            <input
-              type="text"
-              class="modal__input modal__input_type_name"
-              name="name"
-              placeholder="Name"
-              id="profile-title-name"
-            />
-            <input
-              type="text"
-              class="modal__input modal__input_type_description"
-              name="description"
-              placeholder="Description"
-              id="profile-description-input"
-            />
+            <label class="modal__label">
+              <input
+                type="text"
+                class="modal__input modal__input_type_name"
+                name="name"
+                placeholder="Name"
+                id="profile-title-name"
+                minlength="2"
+                maxlength="40"
+                required
+              />
+              <span class="modal_error" id="profile-title-name-error"></span>
+            </label>
+            <label class="modal__label">
+              <input
+                type="text"
+                class="modal__input modal__input_type_description"
+                name="description"
+                placeholder="Description"
+                id="profile-description-input"
+                minlength="2"
+                maxlength="200"
+                required
+              />
+              <span
+                class="modal_error"
+                id="profile-description-input-error"
+              ></span>
+            </label>
             <button type="submit" class="button modal__button">Save</button>
           </form>
         </div>
@@ -72,20 +87,30 @@
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">New place</h2>
           <form class="modal__form" id="modal-form">
-            <input
-              type="text"
-              class="modal__input modal__input_type_title"
-              name="title"
-              placeholder="Title"
-              id="card-title-input"
-            />
-            <input
-              type="text"
-              class="modal__input modal__input_type_url"
-              name="url"
-              placeholder="Image URL"
-              id="card-url-input"
-            />
+            <label class="modal__label">
+              <input
+                type="text"
+                class="modal__input modal__input_type_title"
+                name="title"
+                placeholder="Title"
+                id="card-title-input"
+                minlength="1"
+                maxlength="30"
+                required
+              />
+              <span class="modal_error" id="card-title-input-error"></span>
+            </label>
+            <label class="modal__label">
+              <input
+                type="url"
+                class="modal__input modal__input_type_url"
+                name="url"
+                placeholder="Image URL"
+                id="card-url-input"
+                required
+              />
+              <span class="modal_error" id="card-url-input-error"></span>
+            </label>
             <button type="submit" class="button modal__button">Save</button>
           </form>
         </div>
@@ -112,6 +137,8 @@
         </div>
       </li>
     </template>
+    <!-- js -->
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
