project 6, completed, 3rd try

--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
                 id="profile-description-input-error"
               ></span>
             </label>
-            <button type="submit" class="button modal__button">Save</button>
+            <button
+              type="submit"
+              class="button modal__button modal__button_disabled"
+            >
+              Save
+            </button>
           </form>
         </div>
       </div>
@@ -111,7 +116,12 @@
               />
               <span class="modal_error" id="card-url-input-error"></span>
             </label>
-            <button type="submit" class="button modal__button">Save</button>
+            <button
+              type="submit"
+              class="button modal__button modal__button_disabled"
+            >
+              Save
+            </button>
           </form>
         </div>
       </div>
