--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </li>
     </template>
     <!-- js -->
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script src="./pages/index.js" type="module"></script>
+    <!-- <script src="./scripts/validation.js"></script> -->
   </body>
 </html>
