--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Around the U.S</title>
-    <link href="./pages/index.css" rel="stylesheet" />
+    <!-- <link href="./pages/index.css" rel="stylesheet" /> -->
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="images/aroundtheus.svg"
+          src="<%=require('./images/aroundtheus.svg')%>"
           alt="Around the U.S logo"
           class="header__image"
         />
@@ -18,7 +18,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="images/jacques-cousteau.jpg"
+            src="<%=require('./images/jacques-cousteau.jpg')%>"
             alt="Avatar"
             class="profile__image"
           />
@@ -148,7 +148,7 @@
       </li>
     </template>
     <!-- js -->
-    <script src="./pages/index.js" type="module"></script>
+    <!-- <script src="./pages/index.js" type="module"></script> -->
     <!-- <script src="./scripts/validation.js"></script> -->
   </body>
 </html>
