--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
+            <h1 class="profile__title">Manuel Calderon</h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
