--- a/src/index.html
+++ b/src/index.html
@@ -134,6 +134,18 @@
           <p class="modal__caption"></p>
         </div>
       </div>
+
+      <!-- delete card modal -->
+
+      <div class="modal" id="delete-image-modal">
+        <div class="modal__container">
+          <button type="button" class="modal__close" id="modal-close"></button>
+          <h2 class="modal__heading">Are you sure?</h2>
+          <form class="modal__form" id="modal-form">
+            <button type="submit" class="button modal__button">yes</button>
+          </form>
+        </div>
+      </div>
     </div>
 
     <!-- card template -->
