--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,12 @@
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">Are you sure?</h2>
           <form class="modal__form" id="modal-form">
-            <button type="submit" class="button modal__button">yes</button>
+            <button
+              type="submit"
+              class="button modal__button yes__delete-button"
+            >
+              yes
+            </button>
           </form>
         </div>
       </div>
