--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Manuel Calderon</h1>
+            <h1 class="profile__title"></h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
               type="button"
             ></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__description"></p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
