--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,13 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%=require('./images/jacques-cousteau.jpg')%>"
-            alt="Avatar"
-            class="profile__image"
-          />
+          <div class="profile__image-container">
+            <img src="" alt="Avatar" class="profile__image" />
+            <button class="profile__edit-avatar-button" type="button">
+              <img src="<%=require('./images/Vectorr.svg')%>" alt="" class="" />
+            </button>
+            <h2 class="profile__heading"></h2>
+          </div>
           <div class="profile__info">
             <h1 class="profile__title"></h1>
             <button
@@ -150,6 +152,32 @@
             </button>
           </form>
         </div>
+      </div>
+    </div>
+
+    <!-- Avatar Edit Modal -->
+    <div class="modal" id="avatar-edit-modal">
+      <div class="modal__container">
+        <button
+          type="button"
+          class="modal__close"
+          id="avatar-modal-close"
+        ></button>
+        <h2 class="modal__heading">Change Profile Picture</h2>
+        <form class="modal__form" id="avatar-modal-form">
+          <label class="modal__label">
+            <input
+              type="url"
+              class="modal__input modal__input_type_url"
+              name="avatar"
+              placeholder="Image URL"
+              id="avatar-url-input"
+              required
+            />
+            <span class="modal_error" id="avatar-url-input-error"></span>
+          </label>
+          <button type="submit" class="button modal__button">Save</button>
+        </form>
       </div>
     </div>
 
