--- a/src/index.html
+++ b/src/index.html
@@ -17,21 +17,19 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <div class="profile__image-container">
-            <img src="" alt="Avatar" class="profile__image" />
-            <button class="profile__edit-avatar-button" type="button">
-              <img src="<%=require('./images/Vectorr.svg')%>" alt="" class="" />
-            </button>
-            <h2 class="profile__heading"></h2>
-          </div>
+          <img
+            src="<%=require('./images/jacques-cousteau.jpg')%>"
+            alt="Avatar"
+            class="profile__image"
+          />
           <div class="profile__info">
-            <h1 class="profile__title"></h1>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button
               class="profile__edit-button"
               id="profile-edit-button"
               type="button"
             ></button>
-            <p class="profile__description"></p>
+            <p class="profile__description">Explorer</p>
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
@@ -135,49 +133,6 @@
           <img src="" alt="" class="modal__img" />
           <p class="modal__caption"></p>
         </div>
-      </div>
-
-      <!-- delete card modal -->
-
-      <div class="modal" id="delete-image-modal">
-        <div class="modal__container">
-          <button type="button" class="modal__close" id="modal-close"></button>
-          <h2 class="modal__heading">Are you sure?</h2>
-          <form class="modal__form" id="modal-form">
-            <button
-              type="submit"
-              class="button modal__button yes__delete-button"
-            >
-              yes
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <!-- Avatar Edit Modal -->
-    <div class="modal" id="avatar-edit-modal">
-      <div class="modal__container">
-        <button
-          type="button"
-          class="modal__close"
-          id="avatar-modal-close"
-        ></button>
-        <h2 class="modal__heading">Change Profile Picture</h2>
-        <form class="modal__form" id="avatar-modal-form">
-          <label class="modal__label">
-            <input
-              type="url"
-              class="modal__input modal__input_type_url"
-              name="avatar"
-              placeholder="Image URL"
-              id="avatar-url-input"
-              required
-            />
-            <span class="modal_error" id="avatar-url-input-error"></span>
-          </label>
-          <button type="submit" class="button modal__button">Save</button>
-        </form>
       </div>
     </div>
 
