--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="page__content">
       <header class="header page__section">
         <img
-          src="<%=require('./images/aroundtheus.svg')%>"
+          src="<%=require('./images/aroundworldtest2.svg')%>"
           alt="Around the U.S logo"
           class="header__image"
         />
