project 9, completed 3rd try

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">Edit profile</h2>
-          <form class="modal__form" id="modal-form">
+          <form class="modal__form" id="modal-form" novalidate>
             <label class="modal__label">
               <input
                 type="text"
@@ -93,7 +93,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close" id="modal-close"></button>
           <h2 class="modal__heading">New place</h2>
-          <form class="modal__form" id="modal-form">
+          <form class="modal__form" id="modal-form" novalidate>
             <label class="modal__label">
               <input
                 type="text"
@@ -137,7 +137,7 @@
             id="avatar-modal-close"
           ></button>
           <h2 class="modal__heading">Change Profile Picture</h2>
-          <form class="modal__form" id="modal-form">
+          <form class="modal__form" id="modal-form" novalidate>
             <label class="modal__label">
               <input
                 type="url"
@@ -149,7 +149,12 @@
               />
               <span class="modal_error" id="avatar-url-input-error"></span>
             </label>
-            <button type="submit" class="button modal__button">Save</button>
+            <button
+              type="submit"
+              class="button modal__button modal__button_disabled"
+            >
+              Save
+            </button>
           </form>
         </div>
       </div>
